# serial-service

./: .env.dist  .gitignore  .nightenv  README.md  build.sh  config.yaml.dist  diary_backup.py  nohup.out  pyproject.toml  run.sh  serialservice.py
docs/: Doxyfile
epforever/: __main__.py  adapter.py  adapter_error.py  app.py  device.py  device_definition.py  device_instrument.py  main.py  mariadb_adapter.py  register.py  registers.py  sqlitedb_adapter.py  tinydb_adapter.py
resources/: scrapbook.sql
resources/database/: setup.sql  solardb.mwb  solardb.mwb.bak
resources/database/maria/: maria-grafana-queries.sql  solardb-maria.sql
resources/database/sqlite/: solardb-sqlite.sql  sqlite-grafana-dashboard.json  sqlite-grafana-queries.sql
